--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "axios": "^1.1.3",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
     "linebot": "^1.6.1",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.20"
@@ -25,6 +24,7 @@
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.5.1",
-    "eslint-plugin-promise": "^6.1.1"
+    "eslint-plugin-promise": "^6.1.1",
+    "express": "^4.18.2"
   }
 }
